--- a/simple-web/index.html
+++ b/simple-web/index.html
@@ -137,11 +137,11 @@
 <script src="https://cdn.jsdelivr.net/npm/truffle-contract@4.0.31/dist/truffle-contract.min.js" integrity="sha256-uLnHe7f7ZoAhxxmrLwdkX1V6eB/u4+NTk6i24L1FzPs=" crossorigin="anonymous"></script>
 
 <script type="text/javascript">
-    // TODO Temporary addresses, to be updated..
-    const swapFactoryAddress = "0x149636eECb98F8564adec9a7E36b8Fc16Da9507F";
-    const swapTokenAddress = "0x384779758032D01f57Adb44cD4409D4cE07040c4";
-    const daiAddress = "0xdDb4Dd12Ea6C92D09FaA4B64FE398F926be23A12";
-    const rtokenAddress = "0x96923dA433Be67C18D24C5D60B8d4A250D9AC66b";
+    // Kovan addresses
+    const daiAddress = "0x4F96Fe3b7A6Cf9725f59d353F723c1bDb64CA6Aa";
+    const rtokenAddress = "0x462303f77a3f17Dbd95eb7bab412FE4937F9B9CB";
+    const swapFactoryAddress = "0xA66e7018DF6cD67aAf08179671b2F760bC6d21Be";
+    const swapTokenAddress = "0x941Cc201017c4f31F7eD569d302A8372BAa299D5";
 
     async function getProvider() {
         let web3Provider;
